--- a/SistemaDeAdministracionDePrestamos/SistemaDeAdministracionDePrestamos.csproj
+++ b/SistemaDeAdministracionDePrestamos/SistemaDeAdministracionDePrestamos.csproj
@@ -202,9 +202,16 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AbonoRecibo.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AtrasoRecibo.cs" />
+    <Compile Include="Models\Cliente.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Pago.cs" />
+    <Compile Include="Models\Prestamo.cs" />
+    <Compile Include="Models\Recibo.cs" />
+    <Compile Include="Models\SolicitudPrestamo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
