--- a/SistemaDeAdministracionDePrestamos/SistemaDeAdministracionDePrestamos.csproj
+++ b/SistemaDeAdministracionDePrestamos/SistemaDeAdministracionDePrestamos.csproj
@@ -78,6 +78,14 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -197,11 +205,25 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803131749260_InitialCreate.cs" />
+    <Compile Include="Migrations\201803131749260_InitialCreate.Designer.cs">
+      <DependentUpon>201803131749260_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803131818414_SAPContext.cs" />
+    <Compile Include="Migrations\201803131818414_SAPContext.Designer.cs">
+      <DependentUpon>201803131818414_SAPContext.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803131824115_SAPContext1.cs" />
+    <Compile Include="Migrations\201803131824115_SAPContext1.Designer.cs">
+      <DependentUpon>201803131824115_SAPContext1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AbonoRecibo.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AtrasoRecibo.cs" />
@@ -273,6 +295,7 @@
     <Content Include="Content\html\less\spinners.css" />
     <Content Include="Content\html\map-google.html" />
     <Content Include="Content\html\profile.html" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="Content\plugins\bower_components\chartist-js\dist\chartist-init.css" />
     <Content Include="Content\plugins\bower_components\chartist-js\dist\chartist-init.js" />
     <Content Include="Content\plugins\bower_components\chartist-js\dist\chartist.css" />
@@ -699,6 +722,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\otf.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
@@ -709,7 +733,9 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Views\Web.config" />
+    <Content Include="Views\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
@@ -737,6 +763,12 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Service References\Application Insights\ConnectedService.json" />
+    <Content Include="Views\Clientes\Create.cshtml" />
+    <Content Include="Views\Clientes\Delete.cshtml" />
+    <Content Include="Views\Clientes\Details.cshtml" />
+    <Content Include="Views\Clientes\Edit.cshtml" />
+    <Content Include="Views\Clientes\Index.cshtml" />
+    <Content Include="Views\Clientes\_Clientes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -751,6 +783,17 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201803131749260_InitialCreate.resx">
+      <DependentUpon>201803131749260_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803131818414_SAPContext.resx">
+      <DependentUpon>201803131818414_SAPContext.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803131824115_SAPContext1.resx">
+      <DependentUpon>201803131824115_SAPContext1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
