--- a/SistemaDeAdministracionDePrestamos/Views/Web.config
+++ b/SistemaDeAdministracionDePrestamos/Views/Web.config
@@ -18,6 +18,9 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="SistemaDeAdministracionDePrestamos" />
+        <add namespace="PagedList" />
+        <add namespace="PagedList.Mvc" />
+        <add namespace="SistemaDeAdministracionDePrestamos.Models" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
