PrestamosController, generating receipts when creating a debt

--- a/SistemaDeAdministracionDePrestamos/SistemaDeAdministracionDePrestamos.csproj
+++ b/SistemaDeAdministracionDePrestamos/SistemaDeAdministracionDePrestamos.csproj
@@ -784,6 +784,7 @@
     <Content Include="Views\Prestamos\Details.cshtml" />
     <Content Include="Views\Prestamos\Edit.cshtml" />
     <Content Include="Views\Prestamos\Index.cshtml" />
+    <Content Include="Views\Prestamos\_Prestamos.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
