--- a/SistemaDeAdministracionDePrestamos/Views/Web.config
+++ b/SistemaDeAdministracionDePrestamos/Views/Web.config
@@ -21,6 +21,7 @@
         <add namespace="PagedList" />
         <add namespace="PagedList.Mvc" />
         <add namespace="SistemaDeAdministracionDePrestamos.Models" />
+        <add namespace="SistemaDeAdministracionDePrestamos.Models.ViewModels" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
