PrestamosController: setting the details view to see also receipts details in that view (Commit all)

--- a/SistemaDeAdministracionDePrestamos/SistemaDeAdministracionDePrestamos.csproj
+++ b/SistemaDeAdministracionDePrestamos/SistemaDeAdministracionDePrestamos.csproj
@@ -783,7 +783,9 @@
     <Content Include="Views\Prestamos\Delete.cshtml" />
     <Content Include="Views\Prestamos\Details.cshtml" />
     <Content Include="Views\Prestamos\Edit.cshtml" />
+    <Content Include="Views\Prestamos\_Recibos.cshtml" />
     <Content Include="Views\Prestamos\Index.cshtml" />
+    <Content Include="Views\Prestamos\_Prestamos.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
